--- a/circo/index.html
+++ b/circo/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230530212040">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230601231256">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
 					<div class="screen-01__body">
 						<div class="screen-01__section-header section-header section-header_lite">
 							<div class="section-header__label">Multipurpose Minimal Solution</div>
-							<h1 class="section-header__title">The simplest things are often the truest…</h1>
+							<h1 class="section-header__title title">The simplest things are often the truest…</h1>
 						</div>
 						<picture><source srcset="img/screen-01/image.webp" type="image/webp"><img class="screen-01__image" src="img/screen-01/image.jpg" alt="image" /></picture>
 					</div>
@@ -31,8 +31,8 @@
 					<div class="screen-02__content">
 						<div class="screen-02__section-header section-header">
 							<div class="section-header__label">Multipurpose Minimal Solution</div>
-							<h2 class="section-header__title">The simplest things are often the truest…</h2>
-							<div class="section-header__text">
+							<h2 class="section-header__title title">The simplest things are often the truest…</h2>
+							<div class="section-header__text text">
 								<p>Dramatically maximize principle-centered models through focused materials. Assertively build fully researched best practices via go forward "outside the box" thinking.</p>
 							</div>
 						</div>
@@ -48,7 +48,7 @@
 					<div class="screen-03__content">
 						<div class="screen-03__section-header section-header">
 							<div class="section-header__label">Multipurpose Minimal Solution</div>
-							<h2 class="section-header__title">The simplest things are often the truest…</h2>
+							<h2 class="section-header__title title">The simplest things are often the truest…</h2>
 						</div>
 						<div class="screen-03__values values-screen-03">
 							<div class="values-screen-03__item">
@@ -68,9 +68,169 @@
 					</div>
 				</div>
 			</section>
+			<section data-fp-section class="page__section screen-04">
+				<div class="screen-04__container">
+					<div class="screen-04__section-header section-header">
+						<div class="section-header__label">Multipurpose Minimal Solution</div>
+						<h2 class="section-header__title section-header__title_big">Make things as simple possible but no simpler</h2>
+					</div>
+					<div class="screen-04__advantages advantages">
+						<article class="advantages__item">
+							<picture><source srcset="img/screen-04/cloud.webp" type="image/webp"><img class="advantages__icon" src="img/screen-04/cloud.jpg" alt="Icon" /></picture>
+							<h4 class="advantages__title title">Cloud System</h4>
+							<div class="advantages__text text">
+								<p>Completely reintermediate extensible infomediaries whereas vortals.</p>
+							</div>
+						</article>
+						<article class="advantages__item">
+							<picture><source srcset="img/screen-04/security.webp" type="image/webp"><img class="advantages__icon" src="img/screen-04/security.jpg" alt="Icon" /></picture>
+							<h4 class="advantages__title title">Security</h4>
+							<div class="advantages__text text">
+								<p>Completely reintermediate extensible infomediaries whereas vortals.</p>
+							</div>
+						</article>
+						<article class="advantages__item">
+							<picture><source srcset="img/screen-04/checatop.webp" type="image/webp"><img class="advantages__icon" src="img/screen-04/checatop.jpg" alt="Icon" /></picture>
+							<h4 class="advantages__title title">Easy to Customize</h4>
+							<div class="advantages__text text">
+								<p>Completely reintermediate extensible infomediaries whereas vortals.</p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
+
+			<section data-fp-section class="page__section screen-05">
+				<div class="screen-05__container">
+					<div class="screen-05__content">
+						<div class="screen-05__section-header section-header">
+							<div class="section-header__label">Multipurpose Minimal Solution</div>
+							<h2 class="section-header__title title">The simplest things are often the truest…</h2>
+							<div class="section-header__text text">
+								<p>Dramatically maximize principle-centered models through focused materials. Assertively build fully researched best practices via go forward "outside the box" thinking.</p>
+							</div>
+						</div>
+					</div>
+					<div class="screen-05__images">
+						<div class="screen-05__image-ibg"><picture><source srcset="img/screen-05/image1.webp" type="image/webp"><img src="img/screen-05/image1.jpg" alt="image" /></picture></div>
+						<div class="screen-05__image-ibg"><picture><source srcset="img/screen-05/image2.webp" type="image/webp"><img src="img/screen-05/image2.jpg" alt="image" /></picture></div>
+					</div>
+				</div>
+			</section>
+
+			<section data-fp-section class="page__section screen-06">
+				<div class="screen-06__container">
+					<div class="screen-06__section-header section-header">
+						<div class="section-header__label">Multipurpose Minimal Solution</div>
+						<h2 class="section-header__title title">The simplest things are often the truest…</h2>
+					</div>
+
+					<div class="screen-06__services services">
+						<div class="services__item">
+							<div class="services__icon">
+								<picture><source srcset="img/screen-06/link.webp" type="image/webp"><img src="img/screen-06/link.jpg" alt="icon" /></picture>
+							</div>
+							<div class="services__body">
+								<h4 class="services__title title">Connection</h4>
+								<div class="services__text text">
+									<p>Rapidiously harness mission process improvements and backward-compatible communities.</p>
+								</div>
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__icon"><picture><source srcset="img/screen-06/idea.webp\" type="image/webp"><img src="img/screen-06/idea.jpg\" alt="icon" /></picture></div>
+							<div class="services__body">
+								<h4 class="services__title title">Creativity</h4>
+								<div class="services__text text">
+									<p>Rapidiously harness mission process improvements and backward-compatible communities.</p>
+								</div>
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__icon">
+								<picture><source srcset="img/screen-06/telegram-app.webp" type="image/webp"><img src="img/screen-06/telegram-app.jpg" alt="icon" /></picture>
+							</div>
+							<div class="services__body">
+								<h4 class="services__title title">Support Center</h4>
+								<div class="services__text text">
+									<p>Rapidiously harness mission process improvements and backward-compatible communities.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section data-fp-section class="page__section screen-07">
+				<div class="screen-07__container">
+					<div class="screen-07__services services">
+						<div class="services__item">
+							<div class="services__icon">
+								<picture><source srcset="img/screen-06/link.webp" type="image/webp"><img src="img/screen-06/link.jpg" alt="icon" /></picture>
+							</div>
+							<div class="services__body">
+								<h4 class="services__title title">Connection</h4>
+								<div class="services__text text">
+									<p>Rapidiously harness mission process improvements and backward-compatible communities.</p>
+								</div>
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__icon">
+								<picture><source srcset="img/screen-06/idea.webp\" type="image/webp"><img src="img/screen-06/idea.jpg\" alt="icon" /></picture>
+							</div>
+							<div class="services__body">
+								<h4 class="services__title title">Creativity</h4>
+								<div class="services__text text">
+									<p>Rapidiously harness mission process improvements and backward-compatible communities.</p>
+								</div>
+							</div>
+						</div>
+						<div class="services__item">
+							<div class="services__icon">
+								<picture><source srcset="img/screen-06/telegram-app.webp" type="image/webp"><img src="img/screen-06/telegram-app.jpg" alt="icon" /></picture>
+							</div>
+							<div class="services__body">
+								<h4 class="services__title title">Support Center</h4>
+								<div class="services__text text">
+									<p>Rapidiously harness mission process improvements and backward-compatible communities.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="screen-07__image">
+						<picture><source srcset="img/screen-07/image7.webp" type="image/webp"><img src="img/screen-07/image7.jpg" alt="image" /></picture>
+					</div>
+				</div>
+			</section>
+
+			<section data-fp-section class="page__section screen-08">
+				<div class="screen-08__container">
+					<div class="screen-08__content">
+						<div class="screen-08__section-header section-header">
+							<div class="section-header__label">Multipurpose Minimal Solution</div>
+							<h2 class="section-header__title title">The simplest things are often the truest…</h2>
+						</div>
+						<div class="screen-08__project project">
+							<div class="project__item">
+								<div class="project__values">80</div>
+								<div class="project__label">Design Sprint</div>
+							</div>
+							<div class="project__item">
+								<div class="project__values">75</div>
+								<div class="project__label">Figma Themes</div>
+							</div>
+						</div>
+					</div>
+					<div class="screen-08__image">
+						<picture><source srcset="img/screen-08/image8.webp" type="image/webp"><img src="img/screen-08/image8.jpg" alt="image" /></picture>
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
-	<script src="js/app.min.js?_v=20230530212040"></script>
+	<script src="js/app.min.js?_v=20230601231256"></script>
 </body>
 
 </html>
