add: verstka alexsmith

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<ul>
 			<li><a target="_blank" href="./circo/index.html">Ciclo</a></li>
+			<li><a target="_blank" href="./growfy/index.html">Growfy</a></li>
 		</ul>
 	</body>
 </html>
