--- a/growfy/index.html
+++ b/growfy/index.html
@@ -12,9 +12,9 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<header class="header">
+			<header class="header cc">
 				<div class="header__container">
-					<a href="" class="header__logo">
+					<a href="#" class="header__logo">
 						<img src="./img/logo/logo.svg" alt="logo" />
 					</a>
 
@@ -36,7 +36,7 @@
 					<a href="" class="header__button button"> Get started </a>
 					<button type="button" class="icon-menu"><span></span></button>
 				</div>
-			</header>
+			</h>
 			<main class="page">
 				<section class="page__main main">
 					<div class="main__container">
