add gp alexsmith

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<ul>
 			<li><a target="_blank" href="./circo/index.html">Ciclo</a></li>
 			<li><a target="_blank" href="./growfy/index.html">Growfy</a></li>
+			<li><a target="_blank" href="./alexsmith/index.html">alexSmith</a></li>
 		</ul>
 	</body>
 </html>
