--- a/AK/index.html
+++ b/AK/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230706230506">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230707223535">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -88,14 +88,10 @@
 
 			<section class="acquaintance">
 				<div class="acquaintance__container">
-					<div class="acquaintance__box-img">
-						<picture><source srcset="img/acquaintance/ph2.webp" type="image/webp"><img src="img/acquaintance/ph2.png" alt="45" /></picture>
-					</div>
-
 					<div class="acquaintance__box">
 						<div class="acquaintance__info">
 							<h3 class="acquaintance__title">Познакомимся?</h3>
-							<p class="acquaintance__text">МЕня зовут ириа</p>
+							<p class="acquaintance__text">Меня зовут Анастасия.Я профессиональный косметолог и мастер по перманентному макиажу.</p>
 							<p class="acquaintance__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea voluptate velit delectus. Enim distinctio hic magnam esse ipsum ipsam deleniti asperiores. Magnam impedit quo explicabo voluptatibus quia asperiores cum dicta.</p>
 						</div>
 						<div class="acquaintance__pluses pluses-items">
@@ -108,20 +104,25 @@
 								<div class="pluses-text__number">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
 							</div>
 							<div class="pluses-items__item">
-								<div class="pluses-item__number">15</div>
+								<div class="pluses-item__number">15+</div>
 								<div class="pluses-text__number">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
 							</div>
 						</div>
 					</div>
+					<div class="acquaintance__box-img">
+						<picture><source srcset="img/acquaintance/ph2.webp" type="image/webp"><img src="img/acquaintance/ph2.png" alt="45" /></picture>
+					</div>
 				</div>
 			</section>
+
+			<section class="services"></section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230706230506"></script>
+	<script src="js/app.min.js?_v=20230707223535"></script>
 </body>
 
 </html>
