--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<li><a target="_blank" href="./circo/index.html">Ciclo</a></li>
 			<li><a target="_blank" href="./growfy/index.html">Growfy</a></li>
 			<li><a target="_blank" href="./alexsmith/index.html">alexSmith</a></li>
-			<li><a target="_blank" href="./AK/index.html">AK</a></li>
+			<li><a target="_blank" href="./AKashkan/index.html">AK</a></li>
 		</ul>
 	</body>
 </html>
