--- a/AKashkan/index.html
+++ b/AKashkan/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230718221959">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230725231410">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,8 +22,8 @@
 						<ul class="menu__list">
 							<li class="menu__item"><a href="" class="menu__link">Услуги</a></li>
 							<li class="menu__item"><a href="" class="menu__link">Портфолио</a></li>
-							<li class="menu__item"><a href="" class="menu__link">Блог</a></li>
-							<li class="menu__item"><a href="" class="menu__link">Озывы</a></li>
+							<li class="menu__item"><a href="https://www.instagram.com/pm_anastasia_kashkan/" target="_blank" class="menu__link">Блог</a></li>
+							<li class="menu__item"><a href="" class="menu__link">Отзывы</a></li>
 						</ul>
 					</nav>
 
@@ -47,18 +47,173 @@
 				</div>
 			</section>
 			<section class="reasons">
-				<div class="reasons__container">
-					<div class="reasons__row"></div>
-					<div class="reasons__row"></div>
+				<!-- <div class="reasons__container">
+						<div class="reasons__column">
+							<h2 class="reasons__title">3 причины сделать перманентный макияж</h2>
+							<div class="reasons__row">
+								<div class="reasons__img">
+									<picture><source srcset="img/reasons/01.webp" type="image/webp"><img src="img/reasons/01.jpg" alt="" /></picture>
+								</div>
+								<div class="reasons__content content-reasons">
+									<h3 class="content-reason__title">1Результат</h3>
+									<p class="content-reason__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, hic?</p>
+									<p class="content-reason__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, hic?</p>
+								</div>
+							</div>
+							<div class="reasons__row">
+								<div class="reasons__img-ibg_contain">
+									<picture><source data-srcset="img/reasons/02.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/reasons/02.jpg" alt="" /></picture>
+								</div>
+
+								<div class="reasons__content content-reasons">
+									<h3 class="content-reason__title">2Без крови,без боли</h3>
+									<p class="content-reason__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, hic?Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, hiAmet, hi</p>
+								</div>
+							</div>
+						</div>
+						<div class="reasons__column">
+							<div class="reasons__row">
+								<div class="reasons__img">
+									<picture><source data-srcset="img/reasons/03.webp" srcset="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" type="image/webp"><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII="  data-src="img/reasons/03.jpg" alt="" /></picture>
+								</div>
+								<div class="reasons__content content-reasons">
+									<h3 class="content-reason__title">3Не всегда уместно</h3>
+									<p class="content-reason__text">Lorem ipsum dolor sit amet consectetur em ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, hiAmet, hadipisicing elit. Amet, hic?</p>
+								</div>
+							</div>
+						</div>
+					</div> -->
+			</section>
+
+			<section class="acquainted">
+				<div class="acquainted__container">
+					<div class="acquainted__img">
+						<picture><source srcset="img/acquainted/ak-removebg-preview.webp" type="image/webp"><img src="img/acquainted/ak-removebg-preview.png" alt="" /></picture>
+					</div>
+					<div class="acquainted__info">
+						<h3 class="acquainted__title">Познакомимся?</h3>
+						<p class="acquainted__text">Меня зовут Анастасия Кашкан. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, perspiciatis!</p>
+						<p class="acquainted__text">Сапожник без сапог-это не про меня. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, perspiciatis!</p>
+
+						<div class="acquainted__numbers">
+							<div class="acquainted__number">
+								<span>150+ </span>
+								Lorem ipsum dolor sit amet.
+							</div>
+							<div class="acquainted__number"><span>100+</span> Lorem ipsum dolor sit amet.</div>
+							<div class="acquainted__number"><span>50</span> Lorem ipsum dolor sit amet.</div>
+						</div>
+					</div>
 				</div>
 			</section>
+
+			<section class="services">
+				<div class="services__container">
+					<h2 class="services__title">Мои услуги</h2>
+					<div data-tabs class="services__item">
+						<nav data-tabs-titles class="services__navigation">
+							<button type="button" class="services__label _tab-active">Татуаж бровей</button>
+							<button type="button" class="services__label">Татуаж губ</button>
+							<button type="button" class="services__label">Стрелки</button>
+						</nav>
+						<div data-tabs-body class="services__content">
+							<div class="services__body">
+								<div class="services__row">
+									<div class="services__info">
+										<h4 class="services__subtitle">Татуаж(перманентный макияж) бровей</h4>
+										<p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, optio sunt iste assumenda similique voluptatem expedita quibusdam, cupiditate corporis unde quidem, recusandae quae animi consectetur?</p>
+										<p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, optio sunt iste assumenda similique voluptatem expedita quibusdam, cupiditate corporis unde quidem, recusandae quae animi consectetur?</p>
+										<a href="#e" class="secvices__button">Записаться</a>
+									</div>
+									<div class="services__images images-servises">
+										<div class="images-servises-row">
+											<div class="images-servises-01">
+												<picture><source srcset="img/servisec/01/01.webp" type="image/webp"><img src="img/servisec/01/01.jpg" alt="" /></picture>
+											</div>
+											<div class="images-servises-02">
+												<picture><source srcset="img/servisec/01/02.webp" type="image/webp"><img src="img/servisec/01/02.jpg" alt="" /></picture>
+											</div>
+										</div>
+										<div class="images-servises-row">
+											<div class="images-servises-03">
+												<picture><source srcset="img/servisec/01/03.webp" type="image/webp"><img src="img/servisec/01/03.jpg" alt="" /></picture>
+											</div>
+											<div class="images-servises-04">
+												<picture><source srcset="img/servisec/01/04.webp" type="image/webp"><img src="img/servisec/01/04.jpg" alt="" /></picture>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="services__body">
+								<div class="services__row">
+									<div class="services__info">
+										<h4 class="services__subtitle">Татуаж губ</h4>
+										<p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, optio sunt iste assumenda similique voluptatem expedita quibusdam, cupiditate corporis unde quidem, recusandae quae animi consectetur?</p>
+										<p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, optio sunt iste assumenda similique voluptatem expedita quibusdam, cupiditate corporis unde quidem, recusandae quae animi consectetur?</p>
+										<a href="#r" class="secvices__button">Записаться</a>
+									</div>
+									<div class="services__images images-servises">
+										<div class="images-servises-row">
+											<div class="images-servises-01">
+												<picture><source srcset="img/servisec/02/01.webp" type="image/webp"><img src="img/servisec/02/01.jpg" alt="" /></picture>
+											</div>
+											<div class="images-servises-02">
+												<picture><source srcset="img/servisec/02/02.webp" type="image/webp"><img src="img/servisec/02/02.jpg" alt="" /></picture>
+											</div>
+										</div>
+										<div class="images-servises-row">
+											<div class="images-servises-03">
+												<picture><source srcset="img/servisec/02/03.webp" type="image/webp"><img src="img/servisec/02/03.jpg" alt="" /></picture>
+											</div>
+											<div class="images-servises-04">
+												<picture><source srcset="img/servisec/02/04.webp" type="image/webp"><img src="img/servisec/02/04.jpg" alt="" /></picture>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="services__body">
+								<div class="services__row">
+									<div class="services__info">
+										<h4 class="services__subtitle">Стрелки</h4>
+										<p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, optio sunt iste assumenda similique voluptatem expedita quibusdam, cupiditate corporis unde quidem, recusandae quae animi consectetur?</p>
+										<p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, optio sunt iste assumenda similique voluptatem expedita quibusdam, cupiditate corporis unde quidem, recusandae quae animi consectetur?</p>
+										<a href="#t"" class=" secvices__button">Записаться</a>
+									</div>
+									<div class="services__images images-servises">
+										<div class="images-servises-row">
+											<div class="images-servises-01">
+												<picture><source srcset="img/servisec/03/01.webp" type="image/webp"><img src="img/servisec/03/01.jpg" alt="" /></picture>
+											</div>
+											<div class="images-servises-02">
+												<picture><source srcset="img/servisec/03/02.webp" type="image/webp"><img src="img/servisec/03/02.jpg" alt="" /></picture>
+											</div>
+										</div>
+										<div class="images-servises-row">
+											<div class="images-servises-03">
+												<picture><source srcset="img/servisec/03/03.webp" type="image/webp"><img src="img/servisec/03/03.jpg" alt="" /></picture>
+											</div>
+											<div class="images-servises-04">
+												<picture><source srcset="img/servisec/03/04.webp" type="image/webp"><img src="img/servisec/03/04.jpg" alt="" /></picture>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="ccc"></section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230718221959"></script>
+	<script src="js/app.min.js?_v=20230725231410"></script>
 </body>
 
 </html>
