--- a/AKashkan/index.html
+++ b/AKashkan/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230725231410">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230726234008">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -179,7 +179,7 @@
 										<h4 class="services__subtitle">Стрелки</h4>
 										<p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, optio sunt iste assumenda similique voluptatem expedita quibusdam, cupiditate corporis unde quidem, recusandae quae animi consectetur?</p>
 										<p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, optio sunt iste assumenda similique voluptatem expedita quibusdam, cupiditate corporis unde quidem, recusandae quae animi consectetur?</p>
-										<a href="#t"" class=" secvices__button">Записаться</a>
+										<a href="#" class="secvices__button">Записаться</a>
 									</div>
 									<div class="services__images images-servises">
 										<div class="images-servises-row">
@@ -206,14 +206,58 @@
 				</div>
 			</section>
 
-			<section class="ccc"></section>
+			<section class="portfolio">
+				<div class="portfolio__container">
+					<h2 class="portfolio__title">Портфолио</h2>
+					<p class="portfolio__text">Результаты моих работ</p>
+
+					<div data-gallery class="portfolio__gallery gallery">
+						<a href="img/gallery/01.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/01.webp" type="image/webp"><img src="img/gallery/01.jpg" alt="Превью-1" class="gallery__preview" /></picture>
+						</a>
+						<a href="img/gallery/02.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/02.webp" type="image/webp"><img src="img/gallery/02.jpg" alt="Превью-2" class="gallery__preview" /></picture>
+						</a>
+						<a href="img/gallery/03.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/03.webp" type="image/webp"><img src="img/gallery/03.jpg" alt="Превью-3" class="gallery__preview" /></picture>
+						</a>
+						<a href="img/gallery/04.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/04.webp" type="image/webp"><img src="img/gallery/04.jpg" alt="Превью-4" class="gallery__preview" /></picture>
+						</a>
+						<a href="img/gallery/05.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/05.webp" type="image/webp"><img src="img/gallery/05.jpg" alt="Превью-5" class="gallery__preview" /></picture>
+						</a>
+						<a href="img/gallery/06.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/06.webp" type="image/webp"><img src="img/gallery/06.jpg" alt="Превью-6" class="gallery__preview" /></picture>
+						</a>
+						<a href="img/gallery/07.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/07.webp" type="image/webp"><img src="img/gallery/07.jpg" alt="Превью-7" class="gallery__preview" /></picture>
+						</a>
+						<a href="img/gallery/08.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/08.webp" type="image/webp"><img src="img/gallery/08.jpg" alt="Превью-8" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/09.webp" type="image/webp"><img src="img/gallery/09.jpg" alt="Превью-8" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/10.webp" type="image/webp"><img src="img/gallery/10.jpg" alt="Превью-8" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/11.webp" type="image/webp"><img src="img/gallery/11.jpg" alt="Превью-8" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/12.webp" type="image/webp"><img src="img/gallery/12.jpg" alt="Превью-8" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/13.webp" type="image/webp"><img src="img/gallery/13.jpg" alt="Превью-8" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/14.webp" type="image/webp"><img src="img/gallery/14.jpg" alt="Превью-8" class="gallery__preview" /></picture>
+						</a>
+						<a href="img/gallery/09.jpg " class="gallery__image c"> </a>
+						<a href="img/gallery/10.jpg " class="gallery__image c"> </a>
+						<a href="img/gallery/11.jpg " class="gallery__image c"> </a>
+						<a href="img/gallery/12.jpg " class="gallery__image c"> </a>
+						<a href="img/gallery/13.jpg " class="gallery__image c"> </a>
+						<a href="img/reasons/02.jpg " class="gallery__image c"> </a>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230725231410"></script>
+	<script src="js/app.min.js?_v=20230726234008"></script>
 </body>
 
 </html>
