--- a/AKashkan/index.html
+++ b/AKashkan/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230726235156">
+	<link rel="stylesheet" href="css/style.min.css?_v=20230728235001">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -213,31 +213,53 @@
 
 					<div data-gallery class="portfolio__gallery gallery">
 						<a href="img/gallery/01.jpg " class="gallery__image">
-							<picture><source srcset="img/gallery/01.webp" type="image/webp"><img src="img/gallery/01.jpg" alt="Превью-1" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/01.webp" type="image/webp"><img src="img/gallery/01.jpg" alt="" class="gallery__preview" /></picture>
 						</a>
 						<a href="img/gallery/02.jpg " class="gallery__image">
-							<picture><source srcset="img/gallery/02.webp" type="image/webp"><img src="img/gallery/02.jpg" alt="Превью-2" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/02.webp" type="image/webp"><img src="img/gallery/02.jpg" alt="" class="gallery__preview" /></picture>
+						</a>
+
+						<a href="img/gallery/03.jpg " class="gallery__image">
+							<picture><source srcset="img/gallery/03.webp" type="image/webp"><img src="img/gallery/03.jpg" alt="" class="gallery__preview" /></picture>
 						</a>
 
 						<a href="img/gallery/04.jpg " class="gallery__image">
-							<picture><source srcset="img/gallery/04.webp" type="image/webp"><img src="img/gallery/04.jpg" alt="Превью-4" class="gallery__preview" /></picture>
+							<picture><source srcset="img/gallery/04.webp" type="image/webp"><img src="img/gallery/04.jpg" alt="" class="gallery__preview" /></picture>
 						</a>
+						<a href="img/gallery/05.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/06.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/07.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/08.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/09.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/10.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/11.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/12.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/13.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/14.jpg " class="gallery__image galary__image-none"> </a>
+						<a href="img/gallery/15.jpg " class="gallery__image galary__image-none"> </a>
+					</div>
+				</div>
+			</section>
 
-						<a href="img/gallery/08.jpg " class="gallery__image">
-							<picture><source srcset="img/gallery/08.webp" type="image/webp"><img src="img/gallery/08.jpg" alt="Превью-8" class="gallery__preview" /></picture>
-							<picture><source srcset="img/gallery/09.webp" type="image/webp"><img src="img/gallery/09.jpg" alt="Превью-8" class="gallery__preview" /></picture>
-							<picture><source srcset="img/gallery/10.webp" type="image/webp"><img src="img/gallery/10.jpg" alt="Превью-8" class="gallery__preview" /></picture>
-							<picture><source srcset="img/gallery/11.webp" type="image/webp"><img src="img/gallery/11.jpg" alt="Превью-8" class="gallery__preview" /></picture>
-							<picture><source srcset="img/gallery/12.webp" type="image/webp"><img src="img/gallery/12.jpg" alt="Превью-8" class="gallery__preview" /></picture>
-							<picture><source srcset="img/gallery/13.webp" type="image/webp"><img src="img/gallery/13.jpg" alt="Превью-8" class="gallery__preview" /></picture>
-							<picture><source srcset="img/gallery/14.webp" type="image/webp"><img src="img/gallery/14.jpg" alt="Превью-8" class="gallery__preview" /></picture>
-						</a>
-						<a href="img/gallery/09.jpg " class="gallery__image c"> </a>
-						<a href="img/gallery/10.jpg " class="gallery__image c"> </a>
-						<a href="img/gallery/11.jpg " class="gallery__image c"> </a>
-						<a href="img/gallery/12.jpg " class="gallery__image c"> </a>
-						<a href="img/gallery/13.jpg " class="gallery__image c"> </a>
-						<a href="img/reasons/02.jpg " class="gallery__image c"> </a>
+			<section class="procedure">
+				<div class="procedure__container">
+					<h2 class="procedure__title">Выберите процедуру</h2>
+					<div class="procedure__items">
+						<div class="procedure__item item-procedure">
+							<div class="item-procedure__title">Татуаж бровей</div>
+							<div class="item-procedure__price">от 100р</div>
+							<a href="#pfg" class="item-procedure__button">Записаться</a>
+						</div>
+						<div class="procedure__item item-procedure">
+							<div class="item-procedure__title">Татуаж губ</div>
+							<div class="item-procedure__price">от 200р</div>
+							<a href="#pfg" class="item-procedure__button">Записаться</a>
+						</div>
+						<div class="procedure__item item-procedure">
+							<div class="item-procedure__title">Cтрелки</div>
+							<div class="item-procedure__price">от 300р</div>
+							<a href="#pfg" class="item-procedure__button">Записаться</a>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -247,7 +269,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20230726235156"></script>
+	<script src="js/app.min.js?_v=20230728235001"></script>
 </body>
 
 </html>
